fixed background image height issue and added min height to avoid white spaces

--- a/src/App.scss
+++ b/src/App.scss
@@ -8,14 +8,13 @@
   }
 }
 
-
 body {
 /*  background-image: url('./images/3 (1).png');*/
   background-image: linear-gradient(135deg, $dark-blue, $baby-blue);
-
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  min-height: 100vh;
 }
 
 .homepage {
